; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckQuickFloor.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckQuickFloor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [145 x i8] c"\0AOOOPPSS! _cmsQuickFloor() does not work as expected in your machine!\0A\0APlease, edit lcms2mt.h and uncomment the CMS_DONT_USE_FAST_FLOOR toggle.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CheckQuickFloor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckQuickFloor() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @_cmsQuickFloor(double 1.234000e+00)
  %3 = icmp ne i32 %2, 1
  br i1 %3, label %13, label %4

4:                                                ; preds = %0
  %5 = call i32 @_cmsQuickFloor(double 0x40DFFFCEF9DB22D1)
  %6 = icmp ne i32 %5, 32767
  br i1 %6, label %13, label %7

7:                                                ; preds = %4
  %8 = call i32 @_cmsQuickFloor(double -1.234000e+00)
  %9 = icmp ne i32 %8, -2
  br i1 %9, label %13, label %10

10:                                               ; preds = %7
  %11 = call i32 @_cmsQuickFloor(double -3.276710e+04)
  %12 = icmp ne i32 %11, -32768
  br i1 %12, label %13, label %15

13:                                               ; preds = %10, %7, %4, %0
  %14 = call i32 @Die(i8* getelementptr inbounds ([145 x i8], [145 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %16

15:                                               ; preds = %10
  store i32 1, i32* %1, align 4
  br label %16

16:                                               ; preds = %15, %13
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @_cmsQuickFloor(double) #1

declare dso_local i32 @Die(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
